# AuthServerJacks

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs
src/handlers/: admin.rs  auth.rs  mod.rs  web.rs
static/css/: styles.css
static/js/: admin.js
templates/: admin_add_user.html  admin_dashboard.html  admin_login.html  admin_users.html  index.html
