# C:/Users/vini/RustroverProjects/AuthServerJacks/Cargo.toml
[package]
name = "auth_server_jacks"
version = "0.1.0"
edition = "2021"
authors = ["Jack's Auth Server"]
description = "Authentication server for JackBotGUI"

[dependencies]
# Web framework
axum = { version = "0.6.20", features = ["headers"] }
# Ensure "trace" feature is enabled
tower-http = { version = "0.4.4", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1.33.0", features = ["full"] } # Using 1.33.0 as specified in lock file

# Database
# Using 0.7.2 as specified in lock file, ensure features match your setup
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }

# Authentication
jsonwebtoken = "8.3.0" # Using 8.3.0 as specified in lock file
bcrypt = "0.15.1" # Using 0.15.1 as specified in lock file

# Serialization & deserialization
serde = { version = "1.0.219", features = ["derive"] } # Using 1.0.219 from lock file
serde_json = "1.0.140" # Using 1.0.140 from lock file

# Configuration
dotenvy = "0.15.7" # Using 0.15.7 from lock file
tracing = "0.1.41" # Using 0.1.41 from lock file
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } # Using 0.3.19 from lock file

# Error handling
thiserror = "1.0.69" # Using 1.0.69 from lock file
anyhow = "1.0.98" # Using 1.0.98 from lock file

# Utils
chrono = { version = "0.4.40", features = ["serde"] } # Using 0.4.40 from lock file
once_cell = "1.21.3" # Using 1.21.3 from lock file
tower = "0.4.13" # Using 0.4.13 from lock file